[package]
name = "minerva-mbedtls"
version = "0.4.4"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_mbedtls"

[features]
default = ["v3"]
v3 = ["psa-crypto"]
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "984b8dd" }
psa-crypto = { git = "https://github.com/AnimaGUS-minerva/rust-psa-crypto", rev = "16ede75", default-features = false, features=["minerva"], optional = true }

[build-dependencies]
cc = "1.0"
