[package]
name = "minerva-mbedtls"
version = "0.4.11"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_mbedtls"

[features]
default = []
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "984b8dd" }
psa-crypto = { git = "https://github.com/AnimaGUS-minerva/rust-psa-crypto", rev = "dd28b72", default-features = false, features=["minerva"] }
