[package]
name = "minerva-mbedtls-test"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
path = "test.rs"

[features]
default = ["minerva-mbedtls"]
std = ["minerva-mbedtls/std"]

[dependencies]
minerva-mbedtls = { path = '..', default-features = false, optional = true }
