[package]
name = "minerva-mbedtls-test"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
path = "test.rs"

[features]
default = ["minerva-mbedtls"]
std = ["minerva-mbedtls/std"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "984b8dd" }
minerva-mbedtls = { path = '..', default-features = false, optional = true }
