[package]
name = "voucher-v3-x86_64-std"
version = "0.1.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[dependencies]
minerva-mbedtls = { path = "../..", features = ["std"] }
minerva-voucher = { git = "https://github.com/AnimaGUS-minerva/voucher", rev = "6e102be", default-features = false }
